--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
     />
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+      crossorigin="anonymous"
+    ></script>
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
@@ -39,7 +52,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-bounce-to-bottom"
+                  <a href="index.html" class="hvr-bounce-to-bottom"
                     ><i class="fa fa-home" aria-hidden="true"></i
                     ><span>Home</span></a
                   >
@@ -47,7 +60,7 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-bounce-to-bottom"
+                  <a href="resume.html" class="hvr-bounce-to-bottom"
                     ><i class="fa fa-graduation-cap" aria-hidden="true"></i
                     ><span>Resume</span></a
                   >
@@ -56,20 +69,102 @@
                 <li
                   class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-bounce-to-bottom"
-                    ><i class="far fa-comment" aria-hidden="true"></i
-                    ><span>Contact</span></a
+                  <a
+                    href="#myModal"
+                    data-toggle="modal"
+                    class="hvr-bounce-to-bottom"
                   >
+                    <i class="far fa-comment" aria-hidden="true"></i
+                    ><span>Contact</span>
+                  </a>
                 </li>
                 <li
                   class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
                 >
-                  <a href="#" class="hvr-bounce-to-bottom"
+                  <a
+                    href="assets/cv/curriculum.pdf"
+                    target="_blank"
+                    class="hvr-bounce-to-bottom"
                     ><i class="fa fa-download" aria-hidden="true"></i
                     ><span>Download</span></a
                   >
                 </li>
               </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="modal fade"
+        id="myModal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div
+          class="modal-dialog modal-lg modal-dialog-centered"
+          role="document"
+        >
+          <div class="modal-content">
+            <div class="modal-header">
+              <h3 class="contact-heading uppercase" id="exampleModalLabel">
+                Got a project in mind?
+              </h3>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+
+            <div class="modal-body">
+              <h5 class="uppercase text-center" id="modal-secondary-heading">
+                Let's work together!
+              </h5>
+            </div>
+            <div class="center-form">
+              <form
+                method="POST"
+                action="https://script.google.com/macros/s/AKfycbwfKpP_gmWphwrvGc6R0Q7Rib9ZjQcOjReAITy0YKAHmsoxOMoKeF9b6AcrHVp31QXScQ/exec"
+                id="form"
+              >
+                <input
+                  type="text"
+                  name="Name"
+                  id="fullname"
+                  class="form-control"
+                  placeholder="Name"
+                  required
+                />
+                <input
+                  type="text"
+                  name="Email"
+                  id="emailaddress"
+                  class="form-control"
+                  placeholder="Email"
+                  required
+                />
+                <textarea
+                  rows="5"
+                  name="ProjectSummary"
+                  id="projectsummary"
+                  class="form-control"
+                  placeholder="Project description"
+                  required
+                ></textarea>
+                <div class="form-row text-center">
+                  <div class="col">
+                    <button type="submit" id="submit" class="btn btn-secondary">
+                      Send Project Request
+                    </button>
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
@@ -195,7 +290,7 @@
           <h5 class="uppercase general-sub">Download</h5>
           <p class="inline-block">
             Need a printable version of my CV? Download it here.
-            <a href="#" target="_blank" class="cv-pdf">
+            <a href="assets/cv/curriculum.pdf" target="_blank" class="cv-pdf">
               <i class="fa fa-download" aria-hidden="true"></i>
               <span class="sr-only">download link.</span>
             </a>
@@ -205,39 +300,24 @@
           <h5 class="uppercase general-sub">Social networks</h5>
           <ul class="list-inline social-links">
             <li class="list-inline-item">
-              <a target="_blank" href="#">
+              <a target="_blank" href="https://www.facebook.com/carpez/">
                 <i class="fab fa-facebook" aria-hidden="true"></i>
                 <span class="sr-only">Facebook</span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a target="_blank" href="#">
+              <a target="_blank" href="https://twitter.com/Zeprac82">
                 <i class="fab fa-twitter" aria-hidden="true"></i>
                 <span class="sr-only">Twitter</span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a target="_blank" href="#">
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/antonio-bruchi-83639a26a/"
+              >
                 <i class="fab fa-linkedin" aria-hidden="true"></i>
                 <span class="sr-only">LinkedIn</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a target="_blank" href="#">
-                <i class="fab fa-pinterest" aria-hidden="true"></i>
-                <span class="sr-only">Pinterest</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a target="_blank" href="#">
-                <i class="fab fa-instagram" aria-hidden="true"></i>
-                <span class="sr-only">Instagram</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a target="_blank" href="#">
-                <i class="fab fa-youtube" aria-hidden="true"></i>
-                <span class="sr-only">Youtube</span>
               </a>
             </li>
           </ul>
@@ -245,4 +325,29 @@
       </div>
     </footer>
   </body>
+  <script>
+    const form = document.querySelector("#form");
+    const submitButton = document.querySelector("#submit");
+    const scriptURL =
+      "https://script.google.com/macros/s/AKfycbwG9vCMBREFM4suhSiTdVPFu7-F-6JclKyZGGuKjFS-dqaZT6kKXS6r_15kub3YH2R5yw/exec";
+
+    window.addEventListener("load", function () {
+      const form = document.getElementById("form");
+      form.addEventListener("submit", function (e) {
+        e.preventDefault();
+        const data = new FormData(form);
+        const action = e.target.action;
+        fetch(action, {
+          method: "POST",
+          body: data,
+        })
+          .then(() => {
+            alert("Success!");
+          })
+          .then(() => {
+            $("#myModal").modal("hide");
+          });
+      });
+    });
+  </script>
 </html>
